syntax = "proto3";
package mainchain.wrkchain.legacy;

import "gogoproto/gogo.proto";

option go_package = "github.com/unification-com/mainchain/x/wrkchain/legacy/v040";

// WrkChain holds metadata about a registered wrkchain
message WrkChain {
  uint64 wrkchain_id = 1;
  string moniker = 2;
  string name = 3;
  string genesis = 4;
  string type = 5;
  uint64 lastblock = 6;
  uint64 num_blocks = 7;
  uint64 lowest_height = 8;
  uint64 reg_time = 9;
  string owner = 10;
}

// WrkChainBlock holds data about a wrkchain's block hash submission
message WrkChainBlock {
  uint64 height = 1;
  string blockhash = 2;
  string parenthash = 3;
  string hash1 = 4;
  string hash2 = 5;
  string hash3 = 6;
  uint64 sub_time = 7;
}

// Params defines the parameters for the wrkchain module.
message Params {
  uint64 fee_register = 1;
  uint64 fee_record = 2;
  string denom = 3;
}